--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,14 +29,14 @@ jobs:
         run: poetry run pytest
       - name: Build packages
         run: poetry build
-      # - name: Publish to test PyPI
-      #   if: ${{ github.event_name == 'push' }}
-      #   uses: pypa/gh-action-pypi-publish@release/v1
-      #   with:
-      #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      #     repository-url: https://test.pypi.org/legacy/
-      - name: Publish to PyPI
-        if: ${{ github.event_name == 'release' }}
+      - name: Publish to test PyPI
+        if: ${{ github.event_name == 'push' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.PYPI_PUBLISH_TOKEN }}
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
+#      - name: Publish to PyPI
+#        if: ${{ github.event_name == 'release' }}
+#        uses: pypa/gh-action-pypi-publish@release/v1
+#        with:
+#          password: ${{ secrets.PYPI_PUBLISH_TOKEN }}
